--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="vendors/css/animate.css">
         <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
-        <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+        <link rel="stylesheet" type="text/css" href="resources/css/input.css">
         <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
         
         <link rel="shortcut icon" href="resources/img/logo%20-%20Copy%20(1).png">
@@ -24,12 +24,10 @@
                 <div class="nav-row">
                     <div class="row">
                         <a href="index.html"><img src="resources/img/logo%20-%20Copy%20(1).png" alt="Printx logo" class="logo"></a>
-                        <ul class="main-nav main-nav-left js--main-nav">
-                            <li><a class="nav1 active" href="index.html">Inicio</a></li>
+                        <ul class="main-nav">
+                            <li><a class="nav1" href="index.html">Inicio</a></li>
                             <li><a class="nav2" href="decoracion.html">Decoración</a></li>
                             <li><a class="nav3" href="premium.html">Premium</a></li>
-                        </ul>
-                        <ul class="main-nav main-nav-right js--main-nav">
                             <li><a class="nav4" href="ident-corp.html">Identidad<br>Corporativa</a></li>
                             <li><a class="nav5" href="gran-formato.html">Gran<br>Formato</a></li>
                             <li><a class="nav6" href="corte-laser.html">Corte<br>Laser</a></li>
