--- a/templ.html
+++ b/templ.html
@@ -22,14 +22,12 @@
         <header class="sec-head head3">
             <nav>
                 <div class="nav-row">
-                    div class="row">
+                    <div class="row">
                         <a href="index.html"><img src="resources/img/logo%20-%20Copy%20(1).png" alt="Printx logo" class="logo"></a>
-                        <ul class="main-nav main-nav-left js--main-nav">
-                            <li><a class="nav1" href="index.html">Inicio</a></li>
+                        <ul class="main-nav main-nav-right js--main-nav">
+                            <li><a class="nav1 active" href="index.html">Inicio</a></li>
                             <li><a class="nav2" href="decoracion.html">Decoración</a></li>
                             <li><a class="nav3" href="premium.html">Premium</a></li>
-                        </ul>
-                        <ul class="main-nav main-nav-right js--main-nav">
                             <li><a class="nav4" href="ident-corp.html">Identidad<br>Corporativa</a></li>
                             <li><a class="nav5" href="gran-formato.html">Gran<br>Formato</a></li>
                             <li><a class="nav6" href="corte-laser.html">Corte<br>Laser</a></li>
