--- a/decoracion.html
+++ b/decoracion.html
@@ -26,7 +26,7 @@
                         <a href="index.html"><img src="resources/img/logo%20-%20Copy%20(1).png" alt="Printx logo" class="logo"></a>
                         <ul class="main-nav">
                             <li><a class="nav1" href="index.html">Inicio</a></li>
-                            <li><a class="nav2" href="decoracion.html">Decoración</a></li>
+                            <li><a class="nav2" style="color: #fbb142">Decoración</a></li>
                             <li><a class="nav3" href="premium.html">Premium</a></li>
                             <li><a class="nav4" href="ident-corp.html">Identidad<br>Corporativa</a></li>
                             <li><a class="nav5" href="gran-formato.html">Gran<br>Formato</a></li>
