--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="row">
                         <a href="index.html"><img src="resources/img/logo%20-%20Copy%20(1).png" alt="Printx logo" class="logo"></a>
                         <ul class="main-nav">
-                            <li><a class="nav1" href="index.html">Inicio</a></li>
+                            <li><a class="nav1" style="color: #999">Inicio</a></li>
                             <li><a class="nav2" href="decoracion.html">Decoración</a></li>
                             <li><a class="nav3" href="premium.html">Premium</a></li>
                             <li><a class="nav4" href="ident-corp.html">Identidad<br>Corporativa</a></li>
