--- a/corte-laser.html
+++ b/corte-laser.html
@@ -30,7 +30,7 @@
                             <li><a class="nav3" href="premium.html">Premium</a></li>
                             <li><a class="nav4" href="ident-corp.html">Identidad<br>Corporativa</a></li>
                             <li><a class="nav5" href="gran-formato.html">Gran<br>Formato</a></li>
-                            <li><a class="nav6" href="corte-laser.html">Corte<br>Laser</a></li>
+                            <li><a class="nav6" style="color: #fdce47">Corte<br>Laser</a></li>
                         </ul>
                     </div>
                 </div>
