--- a/ident-corp.html
+++ b/ident-corp.html
@@ -28,7 +28,7 @@
                             <li><a class="nav1" href="index.html">Inicio</a></li>
                             <li><a class="nav2" href="decoracion.html">Decoración</a></li>
                             <li><a class="nav3" href="premium.html">Premium</a></li>
-                            <li><a class="nav4" href="ident-corp.html">Identidad<br>Corporativa</a></li>
+                            <li><a class="nav4" style="color: #2bc0ee">Identidad<br>Corporativa</a></li>
                             <li><a class="nav5" href="gran-formato.html">Gran<br>Formato</a></li>
                             <li><a class="nav6" href="corte-laser.html">Corte<br>Laser</a></li>
                         </ul>
