--- a/premium.html
+++ b/premium.html
@@ -27,7 +27,7 @@
                         <ul class="main-nav">
                             <li><a class="nav1" href="index.html">Inicio</a></li>
                             <li><a class="nav2" href="decoracion.html">Decoración</a></li>
-                            <li><a class="nav3" href="premium.html">Premium</a></li>
+                            <li><a class="nav3" style="color: #ef3a72">Premium</a></li>
                             <li><a class="nav4" href="ident-corp.html">Identidad<br>Corporativa</a></li>
                             <li><a class="nav5" href="gran-formato.html">Gran<br>Formato</a></li>
                             <li><a class="nav6" href="corte-laser.html">Corte<br>Laser</a></li>
