--- a/gran-formato.html
+++ b/gran-formato.html
@@ -26,7 +26,7 @@
                     <div class="row">
                         <a href="index.html">                             
                             <div id="logo-box">                                 
-                                <img src="resources/img/logo-simple.svg" alt="Printx logo" id="logo">                               <p id="logo-printx" style="display: block;">PRINTX</p>                                 
+                                <img src="resources/img/logo-simple.svg" alt="Printx logo" id="logo">                               <p id="logo-printx" style="visibility: visible;">PRINTX</p>                                 
                                 <p id="logo-sol">SOLUCIONES DE IMPRESIÓN</p>                             
                             </div>                         
                         </a>
@@ -41,6 +41,18 @@
                     </div>
                 </div>
             </nav>
+            <img src="resources/img/separador.svg" class="separador"></img>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1450.66 208.5" class="separador">
+                <defs>
+                    <style>.cls-1{fill:#f4f4f4;}.cls-2{opacity:0.58;}.cls-3{fill:#4d4d4d;}</style>
+                </defs>
+                <title>separador</title>
+                <g id="Layer_3" data-name="Layer 3">
+                    <g class="cls-2">
+                        <path class="cls-3" id="s5" d="M-.34,156.77a1647,1647,0,0,0,180,26.36q45.29,4.11,90.75,5.58l22.73.6,22.75.31,22.76.3,11.38.14,11.37,0q91,.67,182-2.76C604,185,664.5,181.07,725,176.67l90.85-6.73,45.46-3.27,45.5-3c15.17-.86,30.35-1.81,45.53-2.58S982.73,159.62,998,159s30.52-.84,45.78-.86,30.52.27,45.77.74q45.75,1.59,91.3,6c30.34,3,60.6,6.76,90.69,11.57a1502.4,1502.4,0,0,1,178.18,39.33l-.36,1.46c-29.73-6.2-59.51-12-89.4-17.08-7.47-1.29-15-2.49-22.42-3.72s-15-2.36-22.47-3.4c-15-2.23-30-4.23-45-6.11-7.52-.87-15-1.81-22.55-2.59s-15-1.64-22.57-2.4c-15.06-1.46-30.12-2.78-45.21-3.84s-30.17-2-45.26-2.73-30.21-1.16-45.31-1.43-30.21-.41-45.31-.26-30.2.4-45.29,1l-45.43,1.82c-15.15.6-30.29,1.35-45.44,2l-45.44,2.23-45.45,2.51-90.93,5.44c-60.64,3.65-121.37,6.83-182.16,8.42s-121.6,1.72-182.36.52l-11.4-.2-11.39-.32-22.78-.67L293,195.72l-22.79-1q-45.59-2.23-91-7T88.83,175.57q-45-7.41-89.49-17.34Z" transform="translate(0.66 -41.5)"/>
+                    </g>
+                </g>
+            </svg>
         </header>
         
         <section class="placeholder"></section>
