--- a/ident-corp.html
+++ b/ident-corp.html
@@ -24,12 +24,15 @@
             <nav>
                 <div class="nav-row">
                     <div class="row">
-                        <a href="index.html">                             
-                            <div id="logo-box">                                 
-                                <img src="resources/img/logo-simple.svg" alt="Printx logo" id="logo">                               <p id="logo-printx" style="visibility: visible;">PRINTX</p>                                 
-                                <p id="logo-sol">SOLUCIONES DE IMPRESIÓN</p>                             
-                            </div>                         
-                        </a>
+                        <div id="logo-box">
+                            <a href="index.html">
+                                <img src="resources/img/logo-simple.svg" alt="Printx logo" id="logo">
+                            </a>
+                            <a href="index.html" id="logo-txt">
+                                <p id="logo-printx" style="visibility: visible;">PRINTX</p>
+                                <p id="logo-sol">SOLUCIONES DE IMPRESIÓN</p>
+                            </a>
+                        </div>
                         <ul class="main-nav">
                             <li><a id="nav-h-1" href="index.html">Inicio</a></li>
                             <li><a id="nav-h-2" href="decoracion.html">Decoración</a></li>
