--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
             <nav>
                 <div class="nav-row">
                     <div class="row">
-                        <a href="index.html">
-                            <div id="logo-box">
+                        <div id="logo-box">
+                            <a href="index.html">
                                 <img src="resources/img/logo-simple.svg" alt="Printx logo" id="logo">
+                            </a>
+                            <a href="index.html" id="logo-txt">
                                 <p id="logo-printx" style="visibility: visible;">PRINTX</p>
                                 <p id="logo-sol">SOLUCIONES DE IMPRESIÓN</p>
-                            </div>
-                        </a>
+                            </a>
+                        </div>
                         <ul class="main-nav">
                             <li><a id="nav-h-1" href="#" style="color: #999">Inicio</a></li>
                             <li><a id="nav-h-2" href="decoracion.html">Decoración</a></li>
